--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>I moved to the U.S. when I was around 6, 7th grade from Korea. I did already have an English name Louis, but most people did not pronounce the s at the end when they said my name, as Louis was more like a French name (Louis XIV), and it was pronounced Loui in French. Therefore, I decided to get a new name for myself. I was a fan of Tottenham Hotspur FC at the time, and I think it was around that time when their player <a href="https://en.wikipedia.org/wiki/Lucas_Moura">Lucas Moura</a> scored a hattrick in the Champions League Semi-Final. I was so impressed by this performance that I decided to name myself after him. To this day, this is one of my decisions that I don’t regret. </p>
 
 <h2>The Iconic Hattrick</h2>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/tY5stQvwkBA" title="LUCAS MOURA&#39;S INCREDIBLE HAT-TRICK | HIGHLIGHTS | Ajax 2-3 Spurs (UEFA Champions League semi-final)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="100%" height="500px" src="https://www.youtube.com/embed/tY5stQvwkBA" title="LUCAS MOURA&#39;S INCREDIBLE HAT-TRICK | HIGHLIGHTS | Ajax 2-3 Spurs (UEFA Champions League semi-final)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <div class="paragraph">
 <h3>Video games</h3>
